Details
-
Bug
-
Status: Closed
-
P2
-
Resolution: Fixed
-
11, 14, 15
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8237227 | 15 | Patric Hedlin | P2 | Resolved | Fixed | b06 |
JDK-8237429 | 14.0.1 | Unassigned | P2 | Resolved | Fixed | b01 |
JDK-8290817 | 11.0.17-oracle | Tobias Hartmann | P2 | Closed | Fixed | b04 |
JDK-8290933 | 11.0.17 | Goetz Lindenmaier | P2 | Resolved | Fixed | b01 |
Description
Current thread (0x00007fe8200d2000): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=8968, stack(0x00007fe845d5e000,0x00007fe845e5f000)]
Current CompileTask:
C2: 2156 2041 % 4 org.apache.lucene.util.MSBRadixSorter::radixSort @ 164 (222 bytes)
Stack: [0x00007fe845d5e000,0x00007fe845e5f000], sp=0x00007fe845e59a90, free space=1006k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x9d85a8] IdealLoopTree::est_loop_flow_merge_sz() const+0x158
V [libjvm.so+0x9d8782] IdealLoopTree::est_loop_clone_sz(unsigned int) const+0x12
V [libjvm.so+0x9bee31] IdealLoopTree::estimate_peeling(PhaseIdealLoop*) [clone .part.131]+0x21
V [libjvm.so+0x9cc587] IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&)+0x1f7
V [libjvm.so+0x9cd9bf] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x17f
V [libjvm.so+0x9cd870] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x30
V [libjvm.so+0x9dfa55] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xbd5
V [libjvm.so+0x552cf5] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x1d5
V [libjvm.so+0x550e5e] Compile::Optimize()+0x60e
V [libjvm.so+0x55257c] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xdfc
V [libjvm.so+0x4a2d31] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xc1
V [libjvm.so+0x55bc8c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x32c
V [libjvm.so+0x55d068] CompileBroker::compiler_thread_loop()+0x4e8
V [libjvm.so+0xcc40e2] JavaThread::thread_main_inner()+0xe2
V [libjvm.so+0xcc88fd] Thread::call_run()+0x10d
V [libjvm.so+0xb26057] thread_native_entry(Thread*)+0xe7
Current CompileTask:
C2: 2156 2041 % 4 org.apache.lucene.util.MSBRadixSorter::radixSort @ 164 (222 bytes)
Stack: [0x00007fe845d5e000,0x00007fe845e5f000], sp=0x00007fe845e59a90, free space=1006k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x9d85a8] IdealLoopTree::est_loop_flow_merge_sz() const+0x158
V [libjvm.so+0x9d8782] IdealLoopTree::est_loop_clone_sz(unsigned int) const+0x12
V [libjvm.so+0x9bee31] IdealLoopTree::estimate_peeling(PhaseIdealLoop*) [clone .part.131]+0x21
V [libjvm.so+0x9cc587] IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&)+0x1f7
V [libjvm.so+0x9cd9bf] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x17f
V [libjvm.so+0x9cd870] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x30
V [libjvm.so+0x9dfa55] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xbd5
V [libjvm.so+0x552cf5] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x1d5
V [libjvm.so+0x550e5e] Compile::Optimize()+0x60e
V [libjvm.so+0x55257c] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xdfc
V [libjvm.so+0x4a2d31] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xc1
V [libjvm.so+0x55bc8c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x32c
V [libjvm.so+0x55d068] CompileBroker::compiler_thread_loop()+0x4e8
V [libjvm.so+0xcc40e2] JavaThread::thread_main_inner()+0xe2
V [libjvm.so+0xcc88fd] Thread::call_run()+0x10d
V [libjvm.so+0xb26057] thread_native_entry(Thread*)+0xe7
Attachments
Issue Links
- backported by
-
JDK-8237227 C2 crashes in IdealLoopTree::est_loop_flow_merge_sz()
-
- Resolved
-
-
JDK-8237429 C2 crashes in IdealLoopTree::est_loop_flow_merge_sz()
-
- Resolved
-
-
JDK-8290933 C2 crashes in IdealLoopTree::est_loop_flow_merge_sz()
-
- Resolved
-
-
JDK-8290817 C2 crashes in IdealLoopTree::est_loop_flow_merge_sz()
-
- Closed
-
- duplicates
-
JDK-8236412 SEGV in Node::uncast with Lucene
-
- Closed
-
- relates to
-
JDK-8229499 Node budget assert in fuzzed test
-
- Resolved
-
(1 relates to, 2 links to)