8235870: C2 crashes in IdealLoopTree::est_loop_flow_merge_sz()

Reviewed-by: thartmann